<resources>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="create_card_label">Create new Card.</string>
  <string name="save_label">Save</string>
  <string name="cancel_label">Cancel</string>
  <string name="information_label">Information</string>
  <string name="location_label">Location</string>
  <string name="calendar_label">Calendar</string>
  <string name="hint_label">Hint to display</string>
  <string name="mmss_format">%1$02d:%2$02d</string>
  <string name="date_time_order_format">%1$s %2$s</string>
  <string name="login_failure_message">Unable to sign in with provided credentials.</string>
  <string name="display_name_format">Signed in as %s</string>
  <string name="sign_out">Sign out</string>
  <string name="title_activity_fragment_preferences">fragment_preferences</string>

  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="title_activity_fragment_preferences.xml">fragment_preferences.xml</string>
  <string name="event_date_label">Date of event</string>
  <string name="event_time_label">Time of event</string>
  <string name="event_details_title">Event Details</string>
  <string name="submit_guess_button">Submit guess</string>
  <string name="input_box_hint">Response</string>
  <string name="image_box_hint">Image:</string>
  <string name="hint">Hint:</string>
  <string name="remind_hour">Remind me in one hour.</string>
  <string name="remind_24_hour">Remind me in 24 hours.</string>
  <string name="dont_remind">Don\'t remind me again. (Mark as completed.)</string>
  <string name="close_response">Close enough? (This will record the response as correct.)</string>
  <string name="correct_label">Correct</string>
  <string name="incorrect_label">Incorrect</string>
  <string name="event_date_header">Event Date</string>
  <string name="event_information_header">Information</string>
  <string name="event_location_header">Location</string>
  <string name="events">Home</string>
  <string name="test_label">Test Memory</string>
  <string name="response_history_label">Response History</string>
  <string name="correct_responses_label">Correct responses:</string>
  <string name="incorrect_responses_label">Incorrect response:</string>
  <string name="home_label">Reminder Cards</string>
  <string name="reminder_label">Self-Test</string>
  <string name="history_label">Response History</string>


</resources>