<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.CardDetailsFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_dynamic_spacing">

    <ImageButton
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_check"
      android:background="?android:selectableItemBackgroundBorderless"
      android:tint="#ff00A000"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:contentDescription="@string/save_label"
      android:tooltipText="@string/save_label"/>

    <ImageButton
      android:id="@+id/cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_close"
      android:background="?android:selectableItemBackgroundBorderless"
      android:tint="#ffff0000"
      app:layout_constraintTop_toBottomOf="@id/save"
      app:layout_constraintEnd_toEndOf="parent"
      android:contentDescription="@string/cancel_label"
      android:tooltipText="@string/cancel_label"/>

    <!--    TODO Add objects for the required properties of a card-->


    <TextView
      android:id="@+id/action_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      style="@style/TextAppearance.MaterialComponents.Headline6"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:text="@string/event_details_title"
      />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/information_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@+id/action_title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/save">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="3"
        android:hint="@string/information_label"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/hint_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/information_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/save">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/hint_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/hint_label"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/location_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/hint_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/save">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/location_label"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/date_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/location_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/time_layout"
      app:layout_constraintHorizontal_weight="1">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/event_date_label"
        android:editable="false"
        android:focusable="false"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_baseline_today_24"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/time_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/location_layout"
      app:layout_constraintStart_toEndOf="@id/date_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_weight="1">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/event_time_label"
        android:editable="false"
        android:focusable="false"
        android:drawableEnd="@drawable/ic_baseline_access_time_24"/>
    </com.google.android.material.textfield.TextInputLayout>



    <!--
        <DatePicker
          android:id="@+id/date_picker"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/half_dynamic_spacing"
          android:hint="@string/calendar_label"
          android:datePickerMode="spinner"
          android:calendarViewShown="false"

          app:layout_constraintTop_toBottomOf="@id/location_layout"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>
    -->

    <!--
        <Button
          android:id="@+id/save_for_later"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/half_dynamic_spacing"
          tools:layout_editor_absoluteX="16dp"
          tools:layout_editor_absoluteY="521dp"/>
    -->


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>